@@ -2,6 +2,7 @@
 
 INCLUDES = -I${top_srcdir}/include \
 -DPKGDATADIR=\"${pkgdatadir}\" -DLOCALEDIR=\"${datadir}/locale\" \
+-DOPTIONS_DTD=\"${pkgdatadir}/options-0.dtd\" \
 ${GTK_CFLAGS}
 
 bin_PROGRAMS = rglclock
@@ -12,6 +13,8 @@ rglclock_LDADD = ../lib/libclock.a ../lib/libsimple.a \
 ${GL_LIBS} ${GTK_LIBS}
 
 noinst_HEADERS = getopt.h profile.h
+
+pkgdata_DATA = options-0.dtd
 
 man_MANS = rglclock.1
 
