@@ -1,0 +1,3 @@
+<!ELEMENT rglclock (misc)*>
+<!ELEMENT misc EMPTY>
+<!ATTLIST misc update CDATA #IMPLIED>
