@@ -1,6 +1,6 @@
 News and History of User-Visible Changes in rglclock
 
-$Date: Tue, 16 Nov 1999 20:41:38 +0900 $
+$Date: Sun, 12 Dec 1999 10:33:46 +0900 $
 
 Version 1.4.0 (snapshot for 1.4)
 
@@ -8,6 +8,8 @@ Version 1.4.0 (snapshot for 1.4)
 
 * The message catalog for Japanese is now installed under directory
 ja.eucJP.
+
+* A DTD is supplied for the options file.
 
 Version 1.3.5
 
